Fix footer gap issue

--- a/style.css
+++ b/style.css
@@ -710,6 +710,7 @@ Footer:
   width: 100%;
   height: 4rem;
   padding: 1rem 0;
+  margin-top: auto;
   /* 'Milk-glass' */
   background: rgba(0, 7, 27, 0.6);
   box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
